syntax = "proto3";

package rentearth.pool;

// ============================================================================
// Object Pool Categories
// ============================================================================

// Pool categories for object pooling system
// Used by Unity ObjectPoolManager to categorize pooled objects
enum PoolCategory {
  POOL_CATEGORY_ENTITY = 0;       // EntityType enum (Dino, Humanoid, Critter, etc.)
  POOL_CATEGORY_ENVIRONMENT = 1;  // EnvironmentObjectType enum (Tree, Rock, Bush, Grass)
  POOL_CATEGORY_CHARACTER = 2;    // CharacterType enum (Knight, Barbarian, Mage, etc.)
  POOL_CATEGORY_RESOURCE = 3;     // ResourceType enum (Wood, Stone, Berries, Herbs)
  POOL_CATEGORY_TERRAIN = 4;      // TerrainChunkRenderer (pooled mesh renderers for terrain)
  POOL_CATEGORY_ITEM = 5;         // ItemType enum (dropped items, loot, pickups)
  // TEM (Toon Enchanted Meadow) Categories
  POOL_CATEGORY_BUILDING = 6;     // BuildingType enum (Walls, roofs, floors, structural)
  POOL_CATEGORY_FURNITURE = 7;    // FurnitureType enum (Indoor furniture, decorations)
  POOL_CATEGORY_PROP = 8;         // PropType enum (Exterior props, containers)
  POOL_CATEGORY_STRUCTURE = 9;    // StructureType enum (Bridges, stairs, railings)
  POOL_CATEGORY_RUIN = 10;        // RuinType enum (Destroyed buildings, debris)
  POOL_CATEGORY_VILLAGE = 11;     // Fixed chunk village prefabs (starter town)
}

// ============================================================================
// Entity Type Classification
// ============================================================================

// EntityType - Classification for Entity pool category (typeId mapping)
// Used to categorize different entity types for animation, behavior, and rendering
enum EntityType {
  ENTITY_TYPE_DINO = 0;           // Dinosaurs (T-Rex, Raptor, Stego, etc.)
  ENTITY_TYPE_HUMANOID = 1;       // Humanoid NPCs (Guards, Villagers, etc.)
  ENTITY_TYPE_CRITTER = 2;        // Small ambient creatures (Rabbits, Birds, etc.)
  ENTITY_TYPE_BEAST = 3;          // Large non-dino animals (Bears, Wolves, etc.)
  ENTITY_TYPE_AQUATIC = 4;        // Water creatures (Fish, Sharks, etc.)
  ENTITY_TYPE_FLYING = 5;         // Flying creatures (Dragons, Pterodactyls, etc.)
  ENTITY_TYPE_UNDEAD = 6;         // Undead entities (Zombies, Skeletons, etc.)
  ENTITY_TYPE_ELEMENTAL = 7;      // Elemental beings (Fire, Water, Earth, Air)
  ENTITY_TYPE_CONSTRUCT = 8;      // Mechanical/magical constructs (Golems, etc.)
  ENTITY_TYPE_MYTHICAL = 9;       // Mythical creatures (Unicorns, Phoenix, etc.)
}

// ============================================================================
// Building Type Classification (TEM)
// ============================================================================

// BuildingType - Classification for Building pool category
// Used for TEM (Toon Enchanted Meadow) structural building components
enum BuildingType {
  BUILDING_TYPE_WALL = 0;         // Wall segments (TEM_Wall_*)
  BUILDING_TYPE_WALL_LONG = 1;    // Long wall segments (TEM_Wall_Long_*)
  BUILDING_TYPE_ROOF = 2;         // Roof segments (TEM_Roof_Straight_*, TEM_Roof_Tall_*)
  BUILDING_TYPE_ROOF_CORNER = 3;  // Roof corners (TEM_Roof_Corner_*)
  BUILDING_TYPE_FLOOR = 4;        // Floor/deck surfaces (TEM_Wood_Floor_*, TEM_Paved_Floor_*)
  BUILDING_TYPE_FOUNDATION = 5;   // Foundation blocks (TEM_Foundation_Block_*)
  BUILDING_TYPE_ENTRANCE = 6;     // Doors/windows (TEM_Entrance_*, TEM_Window_Sill_*)
  BUILDING_TYPE_PILLAR = 7;       // Vertical supports (TEM_Wood_Pillar_*, TEM_Stone_Pillar_*)
  BUILDING_TYPE_BEAM = 8;         // Horizontal supports (TEM_Wood_Beam_*, TEM_Wood_Plank_*)
  BUILDING_TYPE_RAILING = 9;      // Railings/fences (TEM_Stone_Railing_*, TEM_Rail_*)
  BUILDING_TYPE_STAIRS = 10;      // Staircases (TEM_Stairs_*)
  BUILDING_TYPE_BRIDGE = 11;      // Bridge components (TEM_Stone_Bridge_*)
  BUILDING_TYPE_ROAD = 12;        // Road/path segments (TEM_Stone_Road_*)
  BUILDING_TYPE_SLAB = 13;        // Stone slabs/steps (TEM_Stone_Slab_*, TEM_Stone_Step_*)
  BUILDING_TYPE_SPECIAL = 14;     // Special structures (TEM_Mill_Wheel_*, TEM_Lamp_Post_*)
  BUILDING_TYPE_EAVE = 15;        // Eave components (TEM_Eave_*)
}

// ============================================================================
// Furniture Type Classification (TEM)
// ============================================================================

// FurnitureType - Classification for Furniture pool category
// Used for TEM indoor furniture and small decorations
enum FurnitureType {
  FURNITURE_TYPE_BED = 0;         // Beds (TEM_Bed_*)
  FURNITURE_TYPE_TABLE = 1;       // Tables (TEM_Wood_Table_*)
  FURNITURE_TYPE_CHAIR = 2;       // Chairs (TEM_Wood_Chair_*)
  FURNITURE_TYPE_BENCH = 3;       // Benches (TEM_Wood_Bench_*)
  FURNITURE_TYPE_CABINET = 4;     // Cabinets/storage (TEM_Wood_Cabinet_*)
  FURNITURE_TYPE_BOOK = 5;        // Books (TEM_Book_*, TEM_Books_*)
  FURNITURE_TYPE_DINNERWARE = 6;  // Plates, bowls (TEM_Plate_*, TEM_Bowl_*)
  FURNITURE_TYPE_LIGHTING = 7;    // Candles, indoor lamps (TEM_Candle_*)
  FURNITURE_TYPE_DECORATION = 8;  // Misc decorations (TEM_Pavement_Dust_*)
}

// ============================================================================
// Prop Type Classification (TEM)
// ============================================================================

// PropType - Classification for Prop pool category
// Used for TEM exterior props, containers, and marketplace items
enum PropType {
  PROP_TYPE_BARREL = 0;           // Barrels (TEM_Wood_Barrel_*)
  PROP_TYPE_CRATE = 1;            // Crates (TEM_Wood_Crate_*, TEM_Produce_Crate_*)
  PROP_TYPE_SACK = 2;             // Sacks (TEM_Sack_*, TEM_Sack_Pile_*)
  PROP_TYPE_BUCKET = 3;           // Buckets (TEM_Wood_Bucket_*)
  PROP_TYPE_CART = 4;             // Carts (TEM_Wood_Cart_*)
  PROP_TYPE_FENCE = 5;            // Fences (TEM_Wood_Fence_*)
  PROP_TYPE_CANOPY = 6;           // Canopies/awnings (TEM_Canopy_*)
  PROP_TYPE_MARKET = 7;           // Market stands (TEM_Market_Stand_*)
  PROP_TYPE_LAMP = 8;             // Outdoor lamps (TEM_Lamp_*, TEM_Lamp_Post_*)
  PROP_TYPE_FLOWER_POT = 9;       // Flower pots (TEM_Flower_Pot_*)
  PROP_TYPE_CHEST = 10;           // Treasure chests (TEM_Treasure_Chest_*)
  PROP_TYPE_MARITIME = 11;        // Boats, piers, bollards (TEM_Boat_*, TEM_Wood_Pier_*, TEM_Pier_Bollard_*)
  PROP_TYPE_FOOD = 12;            // Food items and crates (TEM_Apple_*, TEM_Tomato_*, TEM_Carrot_*)
  PROP_TYPE_BLACKSMITH = 13;      // Forge, anvil, tools (TEM_Forge_*, TEM_Blacksmith_*)
  PROP_TYPE_MISC = 14;            // Miscellaneous props (TEM_Rope_*, TEM_Broom_*, TEM_Mailbox_*)
}

// ============================================================================
// Structure Type Classification (TEM)
// ============================================================================

// StructureType - Classification for Structure pool category
// Used for TEM large-scale structural elements
enum StructureType {
  STRUCTURE_TYPE_BRIDGE = 0;      // Complete bridges
  STRUCTURE_TYPE_STAIRCASE = 1;   // Complete staircases
  STRUCTURE_TYPE_PLATFORM = 2;    // Elevated platforms (TEM_Wood_Platform_*)
  STRUCTURE_TYPE_DECK = 3;        // Decks (TEM_Wood_Deck_*)
  STRUCTURE_TYPE_PIER = 4;        // Complete piers
  STRUCTURE_TYPE_TOWER = 5;       // Assembled towers
}

// ============================================================================
// Ruin Type Classification (TEM)
// ============================================================================

// RuinType - Classification for Ruin pool category
// Used for TEM destroyed/ancient building remnants
enum RuinType {
  RUIN_TYPE_BUILDING = 0;         // Ruined building sections (TEM_Ruin_*)
  RUIN_TYPE_PILLAR = 1;           // Broken pillars (TEM_Broken_Pillar_*)
  RUIN_TYPE_BRICK = 2;            // Scattered bricks (TEM_Ruin_Brick_*)
  RUIN_TYPE_IDOL = 3;             // Ancient idols (TEM_Rock_Idol_*)
  RUIN_TYPE_COLUMN = 4;           // Columns (TEM_Column_*)
  RUIN_TYPE_BLOCK = 5;            // Stone blocks (TEM_Stone_Block_*)
  RUIN_TYPE_DECORATION = 6;       // Pillar decorations (TEM_Broken_Pillar_Decoration_*)
}

// ============================================================================
// LOD (Level of Detail) System
// ============================================================================

// LOD calculation mode for prefabs
enum LODMode {
  LOD_MODE_NONE = 0;              // No LOD management
  LOD_MODE_DISTANCE = 1;          // Distance-based LOD switching
  LOD_MODE_SCREEN_SIZE = 2;       // Screen-size-based LOD switching
}

// LOD settings for a prefab definition
message LODSettings {
  LODMode mode = 1;
  repeated float distances = 2;   // LOD switch distances (or screen percentages)
  bool crossfade = 3;             // Enable crossfade between LOD levels
  float crossfade_duration = 4;   // Duration of crossfade in seconds
}

// ============================================================================
// Prefab Definition System
// ============================================================================

// Single prefab definition for the pool system
// This is the source of truth for prefab metadata shared between server and client
message PrefabDefinition {
  // Identity
  string prefab_id = 1;           // Unique identifier (e.g., "character_knight_v0")
  string display_name = 2;        // Human-readable name
  string description = 3;         // Optional description

  // Pool Key Components
  PoolCategory category = 4;      // Which pool category
  int32 type_id = 5;              // Maps to CharacterType, EntityType, etc.
  int32 variant_id = 6;           // Visual/behavioral variant (0 = default)

  // Variant Management
  bool is_default_variant = 7;    // True if this is the default variant
  int32 fallback_variant_id = 8;  // Fallback if this variant unavailable (-1 = none)

  // Asset References (client-side only, not sent over network)
  string prefab_path = 9;         // Unity asset path (e.g., "Assets/Prefabs/...")
  string addressable_key = 10;    // Addressables key for async loading

  // Pool Configuration
  int32 pool_size = 11;           // Initial pool size
  int32 max_pool_size = 12;       // Maximum pool size (0 = unlimited)
  bool prewarm_on_load = 13;      // Pre-instantiate on scene load

  // Metadata for Queries
  repeated string tags = 14;      // Semantic tags (e.g., "hostile", "animated")
  repeated string labels = 15;    // Addressable labels

  // LOD Configuration
  LODSettings lod_settings = 16;
}

// Route mapping for category-to-path resolution
message RouteMapping {
  PoolCategory category = 1;
  string sub_path = 2;            // Subdirectory under base path
  string addressable_label = 3;   // Label for Addressables queries
}

// Complete prefab registry - the full source of truth
message PrefabRegistry {
  // Metadata
  int32 version = 1;              // Schema version for migrations
  string registry_id = 2;         // Unique identifier for this registry
  string display_name = 3;        // Human-readable name
  string description = 4;         // Optional description
  string base_path = 5;           // Base path for prefab assets

  // Route Configuration
  repeated RouteMapping route_mappings = 6;

  // All Prefab Definitions
  repeated PrefabDefinition prefabs = 7;
}

// ============================================================================
// Tag Registry (for editor tooling)
// ============================================================================

// Single tag definition
message TagDefinition {
  string tag_name = 1;            // Internal name (e.g., "hostile")
  string display_name = 2;        // Display name (e.g., "Hostile Entity")
  string description = 3;         // What this tag means
  string category = 4;            // Tag category for grouping
  string color_hex = 5;           // Editor color (e.g., "FF0000")
}

// Collection of tag definitions
message TagRegistry {
  int32 version = 1;
  repeated TagDefinition tags = 2;
}
